samples/_failures_safe/1761226882_f7b81a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21c913bb.c:170:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 | void init
      | ^~~~
